code/exercise12/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gw
  namespace: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpserver.abc.com
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        credentialName: httpserver
        mode: SIMPLE
